[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/sprites/bow.png" type="Texture" id=1]
[ext_resource path="res://battle/enemies/enemy.gd" type="Script" id=2]
[ext_resource path="res://assets/sprites/enemies.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/mission_complete.png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/mission_fail.png" type="Texture" id=5]
[ext_resource path="res://common/health_bar/HealthBar.tscn" type="PackedScene" id=6]

[node name="TargetType" type="Node2D"]
script = ExtResource( 2 )

[node name="States" type="Node" parent="."]

[node name="Idle" type="Node" parent="States"]

[node name="Attacking" type="Node" parent="States"]

[node name="Dying" type="Node" parent="States"]

[node name="Mission" type="Node2D" parent="."]

[node name="Backing" type="ColorRect" parent="Mission"]
margin_left = -8.0
margin_top = -8.0
margin_right = 8.0
margin_bottom = 8.0
mouse_filter = 2
color = Color( 0.756863, 0.0705882, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Icon" type="Sprite" parent="Mission"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 1 )

[node name="MissionComplete" type="Sprite" parent="Mission"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 4 )

[node name="MissionFail" type="Sprite" parent="Mission"]
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 5 )

[node name="Enemy" type="Node2D" parent="."]
position = Vector2( -0.0625, -6.6875 )

[node name="Backing" type="ColorRect" parent="Enemy"]
margin_left = -8.0
margin_top = 16.0
margin_right = 8.0
margin_bottom = 32.0
mouse_filter = 2
color = Color( 0.756863, 0.0705882, 0.215686, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy" type="Sprite" parent="Enemy"]
position = Vector2( 0, 24 )
scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
vframes = 10
hframes = 8
frame = 20
region_rect = Rect2( 0, 0, 16, 16 )

[node name="HealthBar" parent="." instance=ExtResource( 6 )]
margin_left = -8.93998
margin_top = 26.155
margin_right = -8.93998
margin_bottom = 26.155
rect_scale = Vector2( 0.182712, 0.210984 )
